
	Endless Tower+
	13412 Naght_Seiger_Twin_Edge	Chance while attacking to pierce enemy defence for 5 seconds.
	13413 Naght_Seiger_Twin_Edge_	Chance while attacking to pierce enemy defence for 5 seconds.
	1185 Violet_Fear		Chance while attacking to pierce enemy defence for 5 seconds.
	2385 Recuvative_Armor		Should trigger HP/SP return with magical kills as well.

=======================
2008/09/03
	* Fixed minor inconsistencies with mob_skill_db. (bugreport:2148) [L0ne_W0lf]
2008/08/31
	* Rev. 13160 Added item effects for Mercenary potions. [L0ne_W0lf]
2008/08/29
	* Rev. 13153 Couple small corrections to the mob database. [L0ne_W0lf]
2008/08/25
	* Rev. 13133 Corrected Spear and Swordman mercenary scrolls again. [L0ne_W0lf]
	* Rev. 13132 Corrected Spear and Swordman mercenary summoning scrolls. [L0ne_W0lf]
2008/08/21
	* Rev. 13105 Archer and Knight guardians (WoE 1.0) will no longer detect hidden. [L0ne_W0lf]
2008/08/19
	* Rev. 13094 Fixed invalid element warning in mob database. [L0ne_W0lf]
	* Healing staff and similar items now add to offensive heal as well.
	* Rev. 13091 Fixed bugs in some items. (bugrepot:2059) [L0ne_W0lf]
	* Added stats for some mobs, and fixed some others.
2008/08/15
	* Fixed: incorrect item id (bugreport:2063) [Yommy]
2008/08/14
	* Added: new items, according to kRO items descriptions (commented out for a while) (bugreport:2043) [akrus]
	* Fixed: items 7918, 11703 wrong line format (bugreport:2055) [akrus]
2008/08/12
	* Hammerfall now works with daggers and 1h swords (bugreport:2045) [ultramage]
2008/08/11
	* Rev. 13070 Corrections and fixes to the mob Skill DB. [L0ne_W0lf]
	- Readded the skill "Self destruct" to G_SEYREN
	- B_YGNIZEM Will again teleport on rude attacks.
	- Added Pouring and Bombporing skills.
	* Rev. 13069 Corrected Flame Skull Card, rate os 5% not 50%. This is what happens when your value types are inconsistent. [L0ne_W0lf]
2008/08/10
	* Rev. 13067 Accidentally reverted the fix to Drifter. [L0ne_W0lf]